fixed spacing and worked on consistency

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -51,6 +51,7 @@ color: black;
 
 .topnav-right {
   float: right;
+  padding-top: 7px;
 }
 
 .companyName {
@@ -72,6 +73,7 @@ color: black;
   padding: 18px;
   justify-content: space-evenly;
   align-items: center;
+  padding-bottom: 20px;
 }
 
 .wrapper {
@@ -248,7 +250,7 @@ input::placeholder {
   padding: 5px;
   width: 150px;
   text-align: center;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
